# color-columns

./: .gitignore  CHANGELOG.md  CHANGELOG.txt  Cargo.toml  LICENSE  README.md  build.rs  version-history.txt
resources/: build-time
snapshots/: snapshot.txt
src/: app.rs  blocks.rs  config.rs  constants.rs  fonts.rs  input.rs  main.rs  navigation_instructions.rs  resources.rs  snapshot.rs  stages.rs
src/blocks/: cargo.rs  matches.rs  pile.rs
src/stages/: about.rs  credits.rs  how_to_play.rs  main_menu.rs  playing.rs  title_screen.rs
src/stages/playing/: hud.rs  scoring.rs
